--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -55,7 +55,7 @@
 \newcommand{\todo}[1]{\textcolor{red}{#1}}
 \newcommand{\tocheck}[1]{\textcolor{green}{Check: #1}}
 \newcommand{\citeme}{{\color{magenta} CITE ME!}}
-\newcommand{\ajf}[1]{\textcolor{red}{AtoI: #1}}
+\newcommand{\ajf}[1]{\textcolor{red}{#1}}
 \newcommand{\ilya}[1]{\textcolor{magenta}{#1}}
 
 \def\be{\begin{equation}}
@@ -73,7 +73,7 @@
 %\shorttitle{}
 
 \def\addBham{Institute of Gravitational Wave Astronomy and School of Physics and Astronomy, University of Birmingham, Edgbaston, Birmingham B15 2TT, United Kingdom}
-\def\addMonash{Monash Centre for Astrophysics, School of Physics and Astronomy, Monash University, Clayton, Victoria 3800, Australia}
+\def\addMonash{Monash Centre for Astrophysics, School of Physics and Astronomy, Monash University, Clayton, Victoria 3800, Australia  \ajf{:(}}
 
 
 \author{Ilya Mandel}
@@ -84,7 +84,7 @@
 
 \begin{abstract}
 
-The LIGO and Virgo detectors have recently directly observed gravitational waves from \ilya{several} mergers of pairs of  stellar-mass black holes, as well as from one merging \ilya{pair of} neutron stars.  These observations raise the hope that compact object mergers could be used as a probe of stellar and binary evolution, and perhaps of stellar dynamics. This note summarises the existing observations, describes theoretical predictions for formation channels of merging stellar-mass black-hole binaries along with their rates and observable properties, and presents some of the prospects for gravitational-wave astronomy.
+The LIGO and Virgo detectors have recently directly observed gravitational waves from \ilya{several} mergers of pairs of  stellar-mass black holes, as well as from one merging \ilya{pair of} neutron stars.  These observations raise the hope that compact object mergers could be used as a probe of stellar and binary evolution, and perhaps of stellar dynamics. This \ajf{colloquium-style article} summarises the existing observations, describes theoretical predictions for formation channels of merging stellar-mass black-hole binaries along with their rates and observable properties, and presents some of the prospects for gravitational-wave astronomy.
 
 \end{abstract}
 
@@ -92,11 +92,11 @@ The LIGO and Virgo detectors have recently directly observed gravitational waves
 
 \section{Introduction}
 
-The subject of merging stellar-mass black-hole binaries as gravitational-wave sources is suitable for an  informal colloquium--style article. Several formal reviews were written in the excitement following the first detection \citep{GW150914} of gravitational waves by the Laser Interferometer Gravitational-wave Observatory (LIGO) \citep{GW150914:detectors}, including the astrophysical context companion paper by the the LIGO-Virgo scientific collaboration \citep{GW150914:astro} and the excellent article by \citet{Miller:2016}. More reviews are certainly in the works. However, it is somewhat premature to formally review a field that is both rapidly evolving and very much in its infancy.  With just a few detections to date of gravitational waves from merging black holes \citep{GW150914,GW151226,BBH:O1,GW170104,GW170608,GW170814}, and one from merging neutron stars \citep{GW170817}, we are only beginning to explore the population of merging compact-object binaries.  We are not yet certain of the dominant formation channels for these sources.
+The subject of merging stellar-mass black-hole binaries as gravitational-wave sources is suitable for an  informal colloquium-style article. Several formal reviews were written in the excitement following the first detection \citep{GW150914} of gravitational waves by the Laser Interferometer Gravitational-wave Observatory (LIGO) \citep{GW150914:detectors}, including the astrophysical context companion paper by the the LIGO-Virgo scientific collaboration \citep{GW150914:astro} and the excellent article by \citet{Miller:2016}. More reviews are certainly in the works. However, it is somewhat premature to formally review a field that is both rapidly evolving and very much in its infancy.  With just a few detections to date of gravitational waves from merging black holes \citep{GW150914,GW151226,BBH:O1,GW170104,GW170608,GW170814}, and one from merging neutron stars \citep{GW170817}, we are only beginning to explore the population of merging compact-object binaries.  We are not yet \ajf{even} certain of the dominant formation channels for these sources.
 
 \ilya{Even the full range of astrophysical questions that gravitational-wave observations will answer is a topic of active study and debate:} What can gravitational-wave observations of merging binaries tell us about the stellar and binary evolution that preceded the mergers?  Can the observations constrain the amount of mass loss and expansion experienced by massive stars? Or the stability and consequences of mass transfer, including the infamous common-envelope phase of evolution? Or the amount of mass fallback during supernova explosions, or the kicks that supernovae impart to compact objects? Does the redshift distribution of merging compact objects contain an imprint of the star formation history of the Universe?  Can we use these mergers to probe dynamics in dense stellar environments such as globular clusters? The answers to these important and exciting questions may also in turn influence our understanding of topics as diverse as reionization and heavy-element nucleosynthesis.
 
-In this colloquium-style article, we focus on the questions that strike us as being most interesting and timely at this stage of the field's development.  The choice of these questions is undoubtedly biased by our own interests. Further, we do not attempt to systematically survey all of the relevant literature.  In other words, this is emphatically {\it not} a review \citep{magritte}. 
+In this article, we focus on the questions that strike us as being most interesting and timely at this stage of the field's development.  The choice of these questions is undoubtedly biased by our own interests. Further, we do not attempt to systematically survey all of the relevant literature.  In other words, this is emphatically {\it not} a review \citep{magritte}. 
 
 We summarise the existing observations of merging binary black holes and closely related systems in \autoref{obs}, describe the plausible formation scenarios for binary black holes in \autoref{form}, discuss the predicted merger rates and merging object properties in \autoref{merge}, and speculate about the prospects for gravitational-wave astronomy in \autoref{prospect}.
 
@@ -111,11 +111,11 @@ We summarise the existing observations of merging binary black holes and closely
 \subsubsection{The confirmed detections to date}
 During its first observing run, lasting from September of 2015 through January of 2016, the LIGO detector network observed three likely signals from the mergers of binary black holes.  GW150914 \citep{GW150914} and GW151226 \citep{GW151226} were confident, $> 5\sigma$ observations; LVT151012 was estimated as having a $\sim 90\%$ probability of being a gravitational-wave signal \citep{GW150914:rates,BBH:O1}, though the estimate is conservative and we shall treat it as a detection here.  During the second observing run, lasting with some interruptions from November 2016 through August 2017, three further confident binary black hole detections were announced: GW170104 \citep{GW170104},  GW170608 \citep{GW170608}, and GW170814 \citep{GW170814}, the last of these with the participation of the Virgo gravitational-wave observatory \citep{AdvVirgo}.   The observation of gravitational waves from the binary neutron star merger GW170817 \citep{GW170817} was followed up by an unprecedented campaign of electromagnetic observations, leading to detections of a short gamma ray burst, optical kilonova, and an afterglow spanning from radio through X-ray wavelengths \citep{GW170817:GRB,GW170817:MMA}.  We shall focus on binary black holes for the remainder of this article.
 
-\subsubsection{Information encoded in GW signals}
-The gravitational-wave signature encodes the properties of the \ilya{merging} binary: the component masses and spins. Coupled with information from two or more detectors in a network, this makes it possible to infer the sky location and orientation of the source and the distance to the source \ilya{\citep{Veitch:2014,GW150914:PE}}.  However, some of the source parameters are strongly correlated, leading to near-degeneracies when attempting to extract them from a noisy data set.   For the heaviest black hole binaries such as GW150914, the total mass $M \equiv M_1 + M_2$ is measured relatively accurately as the ringdown, whose frequency is a function of the total mass, falls in the sensitive frequency band of the gravitational-wave detectors.  For most black holes, the chirp mass $M_c \equiv M_1^{3/5} M_2^{3/5} M^{-1/5}$ is the better measured parameter, since it determines to lowest order the rate of frequency evolution during the inspiral phase.  The mass ratio $q\equiv M_2/M_1 \leq 1$ is often quite poorly constrained, because it enters the \ilya{gravitational-wave phase evolution during inspiral} at a higher order in the ratio of the orbital velocity to the speed of light and is partially degenerate with the black hole spins \citep[e.g.,][]{PoissonWill:1995}.  
+\subsubsection{Information encoded in \ajf{gravitational-wave} signals}
+The gravitational-wave signature encodes the properties of the \ilya{merging} binary \ajf{black holes}: the component masses and spins. Coupled with information from two or more detectors in a network, this makes it possible to infer the sky location and orientation of the source and the distance to the source \ilya{\citep{Veitch:2014,GW150914:PE}}.  However, some of the source parameters are strongly correlated, leading to near-degeneracies when attempting to extract them from a noisy dataset.   For the heaviest black hole binaries such as GW150914, the total mass $M \equiv M_1 + M_2$ is measured relatively accurately \ajf{because} the ringdown, whose frequency is a function of the total mass, falls in the sensitive frequency band of \ajf{current} gravitational-wave detectors.  For most black hole \ajf{binaries}, the chirp mass $M_c \equiv M_1^{3/5} M_2^{3/5} M^{-1/5}$ is the better measured parameter, since it determines to lowest order the rate of frequency evolution during the inspiral phase.  The mass ratio $q\equiv M_2/M_1 \leq 1$ is often quite poorly constrained, because it enters the \ilya{gravitational-wave phase evolution during inspiral} at a higher order in the ratio of the orbital velocity to the speed of light and is partially degenerate with the black hole spins \citep[e.g.,][]{PoissonWill:1995}.  
 
-\subsubsection{Information extracted from the observed GW signals}
-We list the parameters of the black holes observed to date in table \ref{table:BHmasses}. Specific system properties are discussed below.
+\subsubsection{Information extracted from the observed \ajf{gravitational-wave} signals}
+We list the parameters of the black hole \ajf{binaries} observed to date in table \ref{table:BHmasses}. Specific system properties are discussed below.
 
 \begin{table}
 \begin{tabular}{lcccccc}
@@ -129,16 +129,16 @@ GW170608\footnote{\citet{GW170608}} & $7.9^{+0.2}_{-0.2}$ &$0.6^{+0.3}_{-0.4}$ &
 GW170814\footnote{\citet{GW170814}} & $24.1^{+1.4}_{-1.1}$ & &$30.5^{+5.7}_{-3.0}$ &$25.3^{+2.8}_{-4.2}$ &$0.06^{+0.12}_{-0.12}$ & $540^{+130}_{-210}$ \\
 \hline
 \end{tabular}
-\caption{The parameters of merging binary black holes inferred from gravitational-wave observations: chirp mass, mass ratio, component masses, effective spin, and luminosity distance.  The median value and the 90\% credible interval bounds are given.}\label{table:BHmasses}
+\caption{The parameters of merging binary black holes inferred from gravitational-wave observations: \ajf{chirp mass $M_c$, mass ratio $q=M_2/M_1$, component masses $M_1$ and $M_2$, effective spin $\chi_\textrm{eff}$, and luminosity distance $d_L$}.  The median value and the 90\% credible interval bounds are given.}\label{table:BHmasses}
 \end{table}
 
 \textbf{Masses:} The individual black hole masses span a range from $\approx 7 M_\odot$ to $\approx 35 M_\odot$.  The masses appear to be roughly uniformly distributed over this range.  However, there is a significant selection bias  toward detecting more massive systems, because sensitivity to gravitational waves from binary mergers depends on the system mass.  The gravitational-wave amplitude, and hence the maximum (horizon) distance at which a source is detectable, scales as $M_c^{5/6}$ for inspiral-dominated signals. The surveyed volume therefore scales as $M_c^{2.5}$.  While the existing observations are not sufficient to accurately determine the mass distribution of merging binary black holes, the observed broad mass distribution, deconvolved with the mass-dependent selection effects, could be consistent with an intrinsic mass distribution of $M^{-2.5}$ \citep{BBH:O1,GW170104}, reminiscent of the stellar initial mass function \citep{Salpeter:1955}.  The uncertainty in the mass distribution is relayed into the uncertainty on inferred merger rates\ilya{, which} are consistent with a broad range spanning $\sim 10$ -- $200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW170104}.  
 
-\textbf{Mass Ratios:} While all binary black holes observed today are consistent with having equal-mass components, mass ratios could be as extreme as $4:1$ in some cases.  
+\textbf{Mass Ratios:} While all binary black holes observed \ajf{to date} are consistent with having equal-mass components, mass ratios could be as extreme as $4:1$ in some cases.  
 
-\textbf{Black Hole Spins:} Individual black hole spins are difficult to measure precisely with gravitational waves.  However, we do know that none of the observed binaries could have large spins aligned with the orbital angular momentum; in fact the \ilya{'effective spin' --- the mass-weighted} dimensionless spin along the direction of the orbital angular momentum, $\chi_\textrm{eff}$ --- is below $0.4$ for all observed events, and consistent with zero for all but one of them.  Interestingly, $\chi_\textrm{eff}$ is not consistent with zero for GW151226, the second lightest binary black hole detected, indicating that at least one of the components for that event must have been a rotating \ilya{(}Kerr\ilya{)} black hole.  Spin projections in the orbital plane are very poorly constrained for all events.
+\textbf{Black Hole Spins:} Individual black hole spins are difficult to measure precisely with gravitational waves.  However, we do know that none of the observed binaries could have large spins aligned with the orbital angular momentum; in fact the \ilya{`effective spin' \ajf{$\chi_\textrm{eff}$} --- the mass-weighted} dimensionless spin along the direction of the orbital angular momentum --- is below $0.4$ for all observed events, and consistent with zero for all but one of them.  Interestingly, $\chi_\textrm{eff}$ is not consistent with zero for GW151226, the second lightest binary black hole detected, indicating that at least one of the components for that event must have been a rotating \ilya{(}Kerr\ilya{)} black hole.  Spin projections in the orbital plane are very poorly constrained for all events.
 
-\textbf{Distances \ilya{and sky locations}:} All signals came from distances of around 500 Mpc to 1 Gpc (redshifts $z\sim 0.1$ -- $0.2$).  With just two operational detectors, LIGO Hanford and LIGO Livingston, for all events prior to GW170814, sources could only be localised to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky.  The participation of the Virgo instrument in the observation of \ilya{GW170814} reduced the sky region to only 60 deg$^2$ \citep{GW170814}.  Nonetheless, associations with specific host galaxies are impossible for all observed binary black hole mergers.  
+\textbf{Distances \ilya{and Sky Locations}:} All \ajf{of the observed} signals came from distances of around 500 Mpc to 1 Gpc (redshifts $z\sim 0.1$ -- $0.2$).  With just two operational detectors, LIGO Hanford and LIGO Livingston, for all events prior to GW170814, sources could only be localised to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky.  The participation of the Virgo instrument in the observation of \ilya{GW170814} reduced the sky region to only 60 deg$^2$ \citep{GW170814}.  Nonetheless, associations with specific host galaxies are impossible for all observed binary black hole mergers.  
 
 \textbf{Testing General Relativity:} All gravitational-wave signals observed to date are consistent with gravitational waves expected within the general theory of relativity, providing a stringent test of this theory in the dynamical, strong-field regime \citep{GW150914:GR,GW170104}.
 
@@ -157,12 +157,12 @@ A wide variety of electromagnetic observations inform our understanding of the e
 \end{itemize}
 Here we focus on X-ray binaries, the type of binary \ilya{system} with the closest connection to merging binary black holes, \ilya{although only} a small minority of black-hole X-ray binaries will ultimately evolve into merging black holes \citep{CygnusX3:2012}. Black hole X-ray binaries consist of a star transferring mass onto a black hole companion, leading to the emission of X-ray radiation from the accretion disk surrounding the black hole. 
 
-\subsubsection{X-Ray Binaries}
+\subsubsection{X-ray binaries}
 
 X-ray binaries containing accreting black holes can be divided into two categories based on the impact of the \ilya{gravitational} pull of the black hole on the companion star.  If the tidal field of the black hole is disrupting the companion, forcing mass to stream onto the black hole in a process known as Roche-lobe overflow, the system is known as a low-mass black-hole X-ray binary.  If the tides are less extreme and the black hole only accretes a fraction of the material (stellar wind) driven off the stellar surface, the system is known as a high-mass X-ray binary.
 
 \textbf{Black Hole Masses:} 
-Black-hole X-ray binaries with dynamical mass measurements provide the only other secure measurements of black hole masses in addition to the gravitational-wave observations described above.  \citet{Ozel:2010} and \citet{Farr:2011} summarize the mass distribution of black-hole X-ray binaries; they find a distribution which ranges from 4 or 5 solar masses for the lightest low-mass X-ray binaries (with a possible mass gap between neutron star and black hole masses) to $\sim 15\, M_\odot$ or more for the heaviest high-mass X-ray binaries.  However, given the doubts subsequently placed on the radial velocity measurements in high-mass X-ray binaries such as IC10 X-1 \citep{Laycock:2015}, there are no known black holes with dynamically confirmed masses certain to exceed $15\, M_\odot$.  The measured masses of black holes in X-ray binaries are sketched in figure \ref{fig:BHmasses}, along with the masses of the observed gravitational-wave sources.  This figure does not include the speculative but potentially very exciting \ilya{evidence for} intermediate-mass black holes \citep{MillerColbert:2004,Pasham:2014}; if such few-hundred solar-mass black holes generically exist in globular clusters, they will be detectable as gravitational-wave sources \ilya{\citep[e.g.,][]{Mandel:2008,IMBBH:O1}}.
+Black-hole X-ray binaries with dynamical mass measurements provide the only secure measurements of black hole masses \ajf{other than} the gravitational-wave observations described above.  \citet{Ozel:2010} and \citet{Farr:2011} summarize the mass distribution of black-hole X-ray binaries; they find a distribution which ranges from 4 or 5 solar masses for the lightest low-mass X-ray binaries (with a possible mass gap between neutron star and black hole masses) to $\sim 15\, M_\odot$ or more for the heaviest high-mass X-ray binaries.  However, given the doubts subsequently placed on the radial velocity measurements in high-mass X-ray binaries such as IC10 X-1 \citep{Laycock:2015}, there are no known black holes with dynamically confirmed masses certain to exceed $15\, M_\odot$.  The measured masses of black holes in X-ray binaries are sketched in figure \ref{fig:BHmasses}, along with the masses of the observed gravitational-wave sources.  This figure does not include the speculative but potentially very exciting \ilya{evidence for} intermediate-mass black holes \citep{MillerColbert:2004,Pasham:2014}; if such few-hundred solar-mass black holes generically exist in globular clusters, they will be detectable as gravitational-wave sources \ilya{\citep[e.g.,][]{Mandel:2008,IMBBH:O1}}.
 %\todo{Add GC X-ray binary observations} 
 
 \begin{figure}
@@ -173,16 +173,16 @@ Black-hole X-ray binaries with dynamical mass measurements provide the only othe
 \end{figure}
 
 
-\textbf{Black Hole Spin Magnitudes:} Black hole X-ray binaries also provide an opportunity for measuring black hole spins \citep[see][for a recent review]{MillerMiller:2015}.  Continuum fitting of the X-ray flux from the disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, which is assumed to correspond to the radius of the innermost stable circular orbit, a sensitive function of black hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the \ilya{inferred spins may} suffer from significant systematics.  For example, out of six systems for which both disk continuum and disk reflection spin measurements are available, the two methods are inconsistent at the $3$ or $5$ sigma level for two systems, and for one system the statistical uncertainty is so large as to span nearly the full allowed range from $0$ to $1$.  However, for the remaining three systems with both measurements available, both methods yield spins $\chi \gtrsim 0.9$.  
+\textbf{Black Hole Spin Magnitudes:} Black hole X-ray binaries also provide an opportunity for measuring black hole spins \citep[see][for a recent review]{MillerMiller:2015}.  Continuum fitting of the X-ray flux from the \ajf{accretion} disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, which is assumed to correspond to the radius of the innermost stable circular orbit, a sensitive function of black hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the \ilya{inferred spins may} suffer from significant systematics.  For example, out of six systems for which both disk continuum and disk reflection spin measurements are available, the two methods are inconsistent at the $3$ or $5$ sigma level for two systems, and for one system the statistical uncertainty is so large as to span nearly the full allowed range from $0$ to $1$.  However, for the remaining three systems with both measurements available, both methods yield spins $\chi \gtrsim 0.9$.  
 
 \textbf{Inconsistency with Spin Observations from GW Sources?} These high-spin observations include two high-mass X-ray binaries: LMC X-1 and Cygnus X-1.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  %Moreover, such high-mass X-ray binaries may be direct progenitors of merging binary black holes \citep{Bulik:2008,CygnusX3:2012}; in fact, 
-Isolated binaries that form binary black holes must go through the high-mass X-ray binary phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, at least some stellar-mass black holes in systems similar to those that could go on to become merging black holes should have high spins.  However, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the binary black holes observed in gravitational waves \citep{HotokezakaPiran:2017}.  Moreover, the spin magnitude measurements in X-ray binaries could be very sensitive to the modelling assumptions, and the systematic errors may dominate the statistical ones \citep[e.g.,][]{Basak:2017,Kawano:2017}.
+Isolated binaries that form binary black holes \ajf{are expected to} go through the high-mass X-ray binary phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, at least some stellar-mass black holes in systems similar to those that could go on to become merging black holes should have high spins.  However, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the binary black holes observed in gravitational waves \citep{HotokezakaPiran:2017}.  Moreover, the spin magnitude measurements in X-ray binaries could be very sensitive to the modelling assumptions, and the systematic errors may dominate the statistical ones \citep[e.g.,][]{Basak:2017,Kawano:2017}.
 
 \textbf{Black Hole Spin Directions:} We know even less about the spin directions than the spin magnitudes.  Although black-hole spin-orbit alignment is assumed in continuum flux measurements \citep{MillerMiller:2015}, some black-hole X-ray binaries, including GRO J1655-40 \citep{Martin:2008}, 4U 1543-47 \citep{MorningstarMiller:2014} and particularly V4641 Sgr \citep{Orosz:2001,Martin:2008b} appear to indicate that the microquasar jet, presumably aligned with the BH spin axis, is misaligned with the orbit.  Moreover, initial stellar spins in binaries have been observed to be misaligned \citep[e.g.,][]{Albrecht:2009,Albrecht:2014}, though there are opportunities for realignment during binary evolution, as described below.
 
 \section{Formation scenarios}\label{form}
 
-When the detection of GW150914 was first announced, many were surprised that it was a binary black hole rather than a binary neutron star, because there was observational evidence for merging double neutron stars in the Galaxy starting with the Hulse-Taylor binary pulsar \citep{HulseTaylor:1975}, but no direct evidence for merging binary black holes. \ilya{And} even more surprised by the high black hole masses, in excess of the observed black hole masses in X-ray binaries. Was this surprise justified? And should we be perplexed by the spin or mass ratio measurements for the gravitational-wave sources? Before answering these questions, we should first discuss how these merging compact binaries come into existence. In fact, this is one of the key outstanding questions that gravitational-wave observations will help us to answer. Below, we explain why -- on the face of it -- it is rather startling that compact massive binaries exist at all. We then describe the leading candidate formation channels, and in the next section we discuss the ways in which gravitational-wave observations might be used to distinguish them.
+When the detection of GW150914 was first announced, many were surprised that it was a binary black hole rather than a binary neutron star\ajf{: there was already} observational evidence for merging double neutron stars in the Galaxy (starting with the Hulse-Taylor binary pulsar \citep{HulseTaylor:1975}), but \ajf{there was} no direct evidence for merging binary black holes. \ajf{Some were} even more surprised by the high black hole masses, in excess of the observed black hole masses in X-ray binaries. Was this surprise justified? And should we be perplexed by the spin or mass ratio measurements for the gravitational-wave sources? \ajf{***we sort of started to answer this in the section right above, so this is a bit jarring***} Before answering these questions, we should first discuss how these merging compact binaries come into existence. In fact, this is one of the key outstanding questions that gravitational-wave observations will help us to answer. Below, we explain why -- on the face of it -- it is rather startling that compact massive binaries exist at all. We then describe the leading candidate formation channels, and in the next section we discuss the ways in which gravitational-wave observations might be used to distinguish them.
 
 
 \subsection{The Separation Question}
