Ack tweak -- Cole.

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -465,10 +465,10 @@ The future of gravitational-wave astronomy holds the thrilling prospect of addre
 
 
 \begin{acknowledgements}
-\ilya{We would like to thank Christopher Berry, Fred Rasio, Dorottya Sz\'{e}csi, and Thomas Tauris for comments that significantly improved this manuscript.}
+\ilya{We would like to thank Christopher Berry, Cole Miller, Fred Rasio, Dorottya Sz\'{e}csi, and Thomas Tauris for comments that significantly improved this manuscript.}
 
 %IM thanks all of the people who have guided him to understand stellar and binary evolution, foremost among them Selma de Mink.   
-\ilya{IM is grateful to} the students who contributed to building COMPAS (Simon Stevenson, Alejandro Vigna G\'{o}mez, Coenraad Neijssel, Jim Barrett, Sebastian Gaebel) and external collaborators (including Stephen Justham, Philipp Podsiadlowski, and \ilya{especially Selma de Mink}).  Coenraad Neijssel deserves additional gratitude for assistance with figures \ref{fig:Rmax} and \ref{fig:BHremnant}. Thanks also to Cole Miller, Vicky Kalogera, and Will Farr for stimulating discussions spanning many years. 
+\ilya{IM is grateful to} the students who contributed to building COMPAS (Simon Stevenson, Alejandro Vigna G\'{o}mez, Coenraad Neijssel, Jim Barrett, Sebastian Gaebel) and external collaborators (including Stephen Justham, Philipp Podsiadlowski, and \ilya{especially Selma de Mink}).  Coenraad Neijssel deserves additional gratitude for assistance with figures \ref{fig:Rmax} and \ref{fig:BHremnant}. Thanks also to Vicky Kalogera and Will Farr for stimulating discussions spanning many years. 
 
 AF is grateful for the astro-tourism.
 \end{acknowledgements}
