Alison edits to Section 3 + bib file

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -1,3 +1,21 @@
+
+@ARTICLE{Trenti:2013,
+   author = {{Trenti}, M. and {van der Marel}, R.},
+    title = "{No energy equipartition in globular clusters}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1302.2152},
+ keywords = {stars: kinematics and dynamics, globular clusters: general},
+     year = 2013,
+    month = nov,
+   volume = 435,
+    pages = {3272-3282},
+      doi = {10.1093/mnras/stt1521},
+   adsurl = {http://adsabs.harvard.edu/abs/2013MNRAS.435.3272T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
  @ARTICLE{Mandel:2007rates,
 author = {{Mandel}, I. and {Brown}, D.~A. and {Gair}, J.~R. and {Miller}, M.~C.},
     title = "{Rates and Characteristics of Intermediate Mass Ratio Inspirals Detectable by Advanced LIGO}",
