fixing my grammar

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -290,7 +290,7 @@ This evolutionary pathway is sketched out in \autoref{fig:chem_homog}:
 	\caption{\label{fig:dynamical} A sketch of merging black hole binary formation via the dynamical evolution channel.}
 \end{figure}
 
-The last possibility we will describe is that the merging black holes may not have formed in \ilya{the same} binary at all.  Instead they formed from the collapse of independent massive stars \ajf{(perhaps each in their own separate binary)}, but were then introduced to each other by a matchmaker, or rather a whole array of matchmakers.   This evolution is illustrated in \autoref{fig:dynamical}: 
+The last possibility we will describe is that the merging black holes may not have formed in \ilya{the same} binary at all.  Instead they formed from the collapse of independent massive stars \ajf{(perhaps each in its own separate binary)}, but were then introduced to each other by a matchmaker, or rather a whole array of matchmakers.   This evolution is illustrated in \autoref{fig:dynamical}: 
 \begin{enumerate}
 \item[a.] Suppose the two black holes formed in a dense stellar environment such as a globular cluster.  
 \item[b.] As the most massive objects in the cluster, the black holes naturally sink toward the cluster center as energy is equipartitioned throughout the cluster in the process known as mass segregation \ajf{\citep[but see][]{Trenti:2013}}.  Once there, they may form binaries through three-body interactions, or by substituting into existing binaries: in a $2+1$ interaction, the lightest object is usually ejected in favor of the two heavier objects forming a binary.  
